--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 REMOTE_HOST=opvn-hots
 REMOTE_PORT=1194
 
-CERT_PATH=/etc/openvpn/server.crt
-CA_PATH=/etc/openvpn/ca.crt
-TA_PATH=/etc/openvpn/ta.key
+CERT_PATH=/etc/openvpn/server/server.crt
+CA_PATH=/etc/openvpn/server/ca.crt
+TC_PATH=/etc/openvpn/server/tc.key
