add placeholders for requests

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,7 @@
 REMOTE_HOST=opvn-hots
 REMOTE_PORT=1194
+
 EASY_RSA_PATH=/etc/openvpn/server/easy-rsa
+
+PROXMOX_HOST=proxmox-host
+PROXMOX_PORT=8006
