add logic for container create/delete/get

--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,9 @@
-REMOTE_HOST=opvn-hots
+REMOTE_HOST=opvn-host
 REMOTE_PORT=1194
 
 EASY_RSA_PATH=/etc/openvpn/server/easy-rsa
 
 PROXMOX_HOST=proxmox-host
 PROXMOX_PORT=8006
+PROXMOX_KEY="PVEAPIToken=<user>@<host>!<token_id>=<token>"
+NODE=proxmox-node
